negative logic to detect environment variable is set is changed

--- a/1/Makefile
+++ b/1/Makefile
@@ -1,10 +1,10 @@
 obj-m += hello.o
 
 all:
-ifndef K_SRC
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules 
-else
+ifdef K_SRC
 	make -C $(K_SRC) M=$(PWD) modules
+else
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules 
 endif
 
 clean:	
